# qa_guru_python_3_17

./: pyproject.toml
