[tool.poetry]
name = "new-project"
version = "0.1.0"
description = ""
authors = ["aselka <bis-aselya@yandex.ru>"]
readme = "README.md"
packages = [{include = "new_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.1"
selene = "2.0.0b14"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
